--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -17,6 +17,11 @@
         <svg viewBox="0 0 24 24"><path d="M3 12a9 9 0 1 0 3-6.7M3 4v5h5" /></svg>
         <span class="text">Subscriptions</span>
     </NavLink>
+
+    <NavLink class="link" href="projections">
+        <svg viewBox="0 0 24 24"><path d="M3 3v18h18M7 16l4-4 4 4 5-6" /></svg>
+        <span class="text">Projections</span>
+    </NavLink>
 </nav>
 
 <style>
